Refactoring server to use gin framework instead of net/http

--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,7 @@ my-app/webapp/yarn-error.log
 .history/*
 
 # Miscellaneous
+my-app/webapp/.angular
 my-app/webapp/.angular/cache
 my-app/webapp/.angular/*
 .sass-cache/
