--- a/my-app/docker-compose.yml
+++ b/my-app/docker-compose.yml
@@ -1,22 +1,14 @@
 version: "3.8"
 services:
-  app:
-    build: .
-    container_name: app
-    ports:
-      - 8080:8080
-    depends_on:
-      - db
-    environment:
-      profile: prod
-      db_pass: pass
   db:
     image: mysql:8.0.31
-    container_name: db
     environment:
-      MYSQL_DATABASE: goxygen
-      MYSQL_USER: goxygen
-      MYSQL_PASSWORD: pass
-      MYSQL_RANDOM_ROOT_PASSWORD: "yes"
+      MYSQL_DATABASE: ${DB_NAME}
+      MYSQL_USER: ${DB_USER}
+      MYSQL_PASSWORD: ${DB_PASS}
+      MYSQL_ROOT_PASSWORD: ${DB_PASS}
+      MYSQL_RANDOM_ROOT_PASSWORD: "no"
+    ports:
+      - ${DB_PORT}:3306
     volumes:
       - ./init-db.sql:/docker-entrypoint-initdb.d/init.sql
