--- a/local_eat/web/angular.json
+++ b/local_eat/web/angular.json
@@ -26,10 +26,10 @@
 						"tsConfig": "tsconfig.app.json",
 						"assets": [
 							"src/favicon.ico",
-							"src/assets"
+							"src/assets",
+                            "src/styles"
 						],
 						"styles": [
-							"src/styles.scss"
 						],
 						"scripts": []
 					},
@@ -94,10 +94,10 @@
 						"tsConfig": "tsconfig.spec.json",
 						"assets": [
 							"src/favicon.ico",
-							"src/assets"
+							"src/assets",
+                            "src/styles"
 						],
 						"styles": [
-							"src/styles.scss"
 						],
 						"scripts": []
 					}
