--- a/.gitignore
+++ b/.gitignore
@@ -14,11 +14,12 @@ local_eat/web/node_modules/.package-lock.json
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # Compiled output
-/dist
-/tmp
-/out-tsc
-/bazel-out
-/build
+*/dist
+*/tmp
+*/out-tsc
+*/bazel-out
+*/build
+local_eat/api/tmp
 
 # Node
 local_eat/web/node_modules
@@ -26,12 +27,12 @@ local_eat/web/npm-debug.log
 local_eat/web/yarn-error.log
 
 # IDEs and editors
-.idea/
-.project
-.classpath
-.c9/
+*.idea/
+*.project
+*.classpath
+*.c9/
 *.launch
-.settings/
+*.settings/
 *.sublime-workspace
 
 # Visual Studio Code
@@ -46,14 +47,15 @@ local_eat/web/yarn-error.log
 local_eat/web/.angular
 local_eat/web/.angular/cache
 local_eat/web/.angular/*
-.sass-cache/
-/connect.lock
-/coverage
-/libpeerconnection.log
-testem.log
-/typings
+*.sass-cache/
+*/connect.lock
+*/coverage
+*/libpeerconnection.log
+*testem.log
+*/typings
 *.env
+*.air.toml
 
 # System files
-.DS_Store
-Thumbs.db
+*.DS_Store
+*Thumbs.db
