--- a/local_eat/docker-compose.yml
+++ b/local_eat/docker-compose.yml
@@ -11,4 +11,4 @@ services:
     ports:
       - ${DB_PORT}:3306
     volumes:
-      - ./init-db.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./db:/docker-entrypoint-initdb.d/
