--- a/local_eat/nginx.conf
+++ b/local_eat/nginx.conf
@@ -10,6 +10,20 @@ http {
 	server {
 		listen 80;
 		server_name localeat.ephec-ti.be;
+		return 301 https://$host$request_uri;
+	}
+
+	server {
+		listen 443 ssl http2;
+		ssl_certificate /etc/letsencrypt/live/localeat.ephec-ti.be/fullchain.pem;
+		ssl_certificate_key /etc/letsencrypt/live/localeat.ephec-ti.be/privkey.pem;
+		ssl_trusted_certificate /etc/letsencrypt/live/localeat.ephec-ti.be/chain.pem;
+
+		ssl_protocols TLSv1.3 TLSv1.2;
+		ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+		ssl_prefer_server_ciphers off;
+
+		server_name localeat.ephec-ti.be;
 		sendfile on;
 		default_type text/javascript;
 
@@ -21,6 +35,10 @@ http {
 		#gzip_proxied      expired no-cache no-store private auth;
 		#gzip_types        text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
 		#gzip_comp_level   5;
+
+		location ~ /.well-known/acme-challenge/ {
+			root /var/www/certbot;
+		}
 
 		location / {
 			root /usr/share/nginx/html;
