Correcting indentation and deleting a wrong file push on remote

--- a/local_eat/docker-compose-deployment.yml
+++ b/local_eat/docker-compose-deployment.yml
@@ -40,6 +40,7 @@ services:
       DB_PORT: 3306
       DB_HOST: db
       JWT_KEY: ${JWT_KEY}
+      profile: prod
     networks:
       - api
       - db
