--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ local_eat/web/node_modules/.package-lock.json
 local_eat/certbot/
 **/pnpm-lock.yaml
 **/.docker
+**/.env.dev
 
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
