Integration test for the API's auth routes #19
- Test made for every http return code implemented
- /ping tested
- /auth/* tested

--- a/local_eat/Dockerfile-api
+++ b/local_eat/Dockerfile-api
@@ -1,6 +1,7 @@
 FROM golang:1.22.3 AS builder
 WORKDIR /app
 COPY ./api .
+RUN apt-get update && apt-get install -y curl
 RUN go build -o api
 
 FROM golang:1.22.3
