--- a/local_eat/docker-compose-deployment.yml
+++ b/local_eat/docker-compose-deployment.yml
@@ -6,6 +6,7 @@ services:
     image: local_eat/web
     container_name: web
     hostname: web
+    restart: always
     ports:
       - 80:80
       - 443:443
@@ -16,7 +17,8 @@ services:
       - ./certbot/conf:/etc/letsencrypt/:ro
       - ./certbot/www:/var/www/certbot/:ro
     depends_on:
-      - api
+      api:
+        condition: service_healthy
   certbot:
     image: certbot/certbot
     container_name: certbot
@@ -33,6 +35,7 @@ services:
     image: local_eat/api
     container_name: api
     hostname: api
+    restart: always
     environment:
       DB_NAME: ${DB_NAME}
       DB_USER: ${DB_USER}
@@ -47,10 +50,17 @@ services:
     depends_on:
       db:
         condition: service_healthy
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080/ping"]
+      interval: 10s
+      timeout: 10s
+      retries: 3
+      start_period: 5s
   db:
     image: mysql:8.0.31
     container_name: db
     hostname: db
+    restart: always
     environment:
       MYSQL_DATABASE: ${DB_NAME}
       MYSQL_USER: ${DB_USER}
@@ -63,10 +73,10 @@ services:
       - ./db/conf:/etc/mysql/conf.d
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "127.0.0.1", "--silent"]
-      interval: 5s
-      timeout: 5s
+      interval: 10s
+      timeout: 10s
       retries: 3
-      start_period: 0s
+      start_period: 10s
 
 networks:
   api:
