--- a/local_eat/web/package.json
+++ b/local_eat/web/package.json
@@ -26,6 +26,7 @@
     "@angular/cli": "^16.2.12",
     "@angular/compiler-cli": "^16.0.0",
     "@types/jasmine": "~4.3.0",
+    "cypress": "^13.9.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-coverage": "~2.2.0",
