adding category and product on ajouter un produit

--- a/local_eat/web/angular.json
+++ b/local_eat/web/angular.json
@@ -30,8 +30,8 @@
                             "src/styles"
 						],
 						"styles": [
-							
-						],
+              "@angular/material/prebuilt-themes/purple-green.css"
+            ],
 						"scripts": []
 					},
 					"configurations": {
@@ -99,7 +99,8 @@
                             "src/styles"
 						],
 						"styles": [
-						],
+              "@angular/material/prebuilt-themes/purple-green.css"
+            ],
 						"scripts": []
 					}
 				}
