--- a/local_eat/nginx.conf
+++ b/local_eat/nginx.conf
@@ -27,14 +27,15 @@ http {
 		sendfile on;
 		default_type text/javascript;
 
-		#gzip on;
-		#gzip_http_version 1.1;
-		#gzip_disable      "MSIE [1-6]\.";
-		#gzip_min_length   256;
-		#gzip_vary         on;
-		#gzip_proxied      expired no-cache no-store private auth;
-		#gzip_types        text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
-		#gzip_comp_level   5;
+		gzip on;
+		gzip_http_version 1.1;
+		gzip_disable      "msie6";
+		gzip_min_length   256;
+		gzip_vary         on;
+		gzip_proxied      any;
+		gzip_types        text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+		gzip_comp_level   6;
+		gzip_buffers 16 8k;
 
 		location ~ /.well-known/acme-challenge/ {
 			root /var/www/certbot;
